// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Field (unit tests) when has a label should match the snapshot 1`] = `
<kv-text-field input-mask-regex="" label="Text Field" placeholder="" state="none" type="text" value="">
  <mock:shadow-root>
    <kv-tooltip position="top-start" truncate="">
      <div class="text-field-container">
        <kv-form-label label="Text Field"></kv-form-label>
        <div class="input-container input-container--size-large">
          <input placeholder="" type="text" value="">
        </div>
        <kv-form-help-text state="none"></kv-form-help-text>
      </div>
    </kv-tooltip>
  </mock:shadow-root>
</kv-text-field>
`;

exports[`Text Field (unit tests) when is disabled should match the snapshot 1`] = `
<kv-text-field disabled="" input-mask-regex="" placeholder="" state="none" type="text" value="">
  <mock:shadow-root>
    <kv-tooltip position="top-start" truncate="">
      <div class="text-field-container">
        <kv-form-label></kv-form-label>
        <div class="input-container input-container--size-large">
          <input disabled="" placeholder="" type="text" value="">
        </div>
        <kv-form-help-text state="none"></kv-form-help-text>
      </div>
    </kv-tooltip>
  </mock:shadow-root>
</kv-text-field>
`;

exports[`Text Field (unit tests) when uses default props should match the snapshot 1`] = `
<kv-text-field input-mask-regex="" placeholder="" state="none" type="text" value="">
  <mock:shadow-root>
    <kv-tooltip position="top-start" truncate="">
      <div class="text-field-container">
        <kv-form-label></kv-form-label>
        <div class="input-container input-container--size-large">
          <input placeholder="" type="text" value="">
        </div>
        <kv-form-help-text state="none"></kv-form-help-text>
      </div>
    </kv-tooltip>
  </mock:shadow-root>
</kv-text-field>
`;
